@@ -1,20 +1,22 @@
 package com.koldyr.google.places;
 
 import java.io.IOException;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.List;
 
 import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.client.methods.HttpUriRequest;
 import org.apache.http.client.methods.RequestBuilder;
 import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.koldyr.google.model.Place;
 import com.koldyr.google.model.TextSearchResponse;
+
+import static java.nio.charset.StandardCharsets.*;
+import static java.util.Objects.*;
 
 /**
  * Description of class PlacesService
@@ -22,7 +24,7 @@ import com.koldyr.google.model.TextSearchResponse;
  * @created: 2018.08.15
  */
 public class FindPlaceService {
-    private static final Logger logger = Logger.getLogger(FindPlaceService.class);
+    private static final Logger logger = LogManager.getLogger(FindPlaceService.class);
 
     private final String serviceUrl;
 
@@ -43,25 +45,20 @@ public class FindPlaceService {
     }
 
     public List<Place> find(String name) {
-        String input;
-        try {
-            input = name.trim().toLowerCase() + " stores in usa";
-            input = URLEncoder.encode(input, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        var input = name.trim().toLowerCase() + " stores in usa";
+        input = URLEncoder.encode(input, UTF_8);
 
-        final String url = String.format(serviceUrl, input);
-        final HttpUriRequest request = RequestBuilder.get(url).build();
+        var url = String.format(serviceUrl, input);
+        var request = RequestBuilder.get(url).build();
 
         try (CloseableHttpResponse response = httpClient.execute(request)) {
-            final TextSearchResponse placeResponse = objectMapper.readValue(response.getEntity().getContent(), TextSearchResponse.class);
+            var placeResponse = objectMapper.readValue(response.getEntity().getContent(), TextSearchResponse.class);
             response.close();
 
-            final List<Place> places = placeResponse.getResults();
-            final String nextPageToken = placeResponse.getNextPageToken();
+            var places = placeResponse.getResults();
+            var nextPageToken = placeResponse.getNextPageToken();
 
-            if (nextPageToken != null) {
+            if (nonNull(nextPageToken)) {
                 loadNextPage(nextPageToken, places);
             }
             logger.debug(name + ": " + places.size());
@@ -76,17 +73,17 @@ public class FindPlaceService {
     private void loadNextPage(String nextPageToken, List<Place> places) throws InterruptedException {
         Thread.sleep(5000);
 
-        final String url = String.format(nextPageUrl, nextPageToken);
-        final HttpUriRequest request = RequestBuilder.get(url).build();
+        var url = String.format(nextPageUrl, nextPageToken);
+        var request = RequestBuilder.get(url).build();
 
         try (CloseableHttpResponse response = httpClient.execute(request)) {
-            TextSearchResponse placeResponse = objectMapper.readValue(response.getEntity().getContent(), TextSearchResponse.class);
+            var placeResponse = objectMapper.readValue(response.getEntity().getContent(), TextSearchResponse.class);
             response.close();
 
             places.addAll(placeResponse.getResults());
-            String nextToken = placeResponse.getNextPageToken();
+            var nextToken = placeResponse.getNextPageToken();
 
-            if (nextToken != null) {
+            if (nonNull(nextToken)) {
                 loadNextPage(nextToken, places);
             }
         } catch (IOException e) {
